# RustyEDES

./: Cargo.toml  README.md  build.rs  build.sh  wrapper.h
benches/: edes.rs
src/: edes.rs  lib.rs
